Finished coding the loginPage -russell

--- a/Login Page/LoginPage.html
+++ b/Login Page/LoginPage.html
@@ -27,7 +27,7 @@
   <body>
     <div id="center">
       <!-- Log in Form  -->
-      <div id="login-form">
+      <div id="login-form" class="col">
         <!-- Title -->
         <h1><strong>Login</strong></h1>
         <!-- profile Picture -->
@@ -58,7 +58,7 @@
         </form>
       </div>
 
-      <div id="information">
+      <div id="information" class="col">
         <div id="beside">
            <!-- Name of the Application -->
         <div id="application-name">
@@ -75,6 +75,15 @@
           <!-- Title -->
           <h2>ACCOUNTABLE FORMS</h2>
         </div>
+        </div>
+        <div id="description">
+          <h3>
+            This computer system is the property of Barangay Bonifacio and is intended for authorized use exclusively. Unauthorized or improper use of this system may lead to administrative disciplinary measures and/or legal consequences, including civil charges and criminal penalties. By proceeding to use this system, you acknowledge your understanding of and agreement to these terms and conditions of use.
+            </h3>
+        </div>
+        <div id="date-and-time">
+          <h2 id="time">2:55AM</h2>
+          <h2 id="date">11/03/2023</h2>
         </div>
       </div>
     </div>
