--- a/Transaction/transaction.html
+++ b/Transaction/transaction.html
@@ -9,127 +9,110 @@
     <div
       class="Transaction"
       style="
-        width: 1920px;
+        width: 1440px;
         height: 1024px;
         position: relative;
-        background: #e2dfdf;
+        background: white;
       "
     >
       <div
-        class="Menucontainer"
+        class="Rectangle4207"
         style="
-          width: 423px;
+          width: 400px;
           height: 1024px;
           left: 0px;
           top: 0px;
           position: absolute;
           background: #7c9982;
+          box-shadow: 4px 4px 4px;
+          border: 5px #7c9982 solid;
+          filter: blur(4px);
         "
       ></div>
-      <div
-        class="Transactioncontainer"
+      <img
+        class="Ellipse102"
         style="
-          width: 424px;
-          height: 69px;
-          left: 0px;
-          top: 599px;
+          width: 118px;
+          height: 117px;
+          left: 17.81px;
+          top: 39px;
           position: absolute;
-          background: white;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          border-radius: 9999px;
+          border: 1px white solid;
         "
-      ></div>
+        src="Krishna Lyn Collen.png"
+      />
       <div
-        class="Profile"
+        class="KrishnaLynCollen"
         style="
-          width: 242px;
-          height: 315px;
-          left: 95px;
-          top: 38px;
+          left: 157.32px;
+          top: 85px;
           position: absolute;
+          color: white;
+          font-size: 22px;
+          font-family: Inter;
+          font-weight: 400;
+          word-wrap: break-word;
         "
       >
-        <div
-          class="BarangayTreasurer"
-          style="
-            width: 232px;
-            left: 5px;
-            top: 289px;
-            position: absolute;
-            text-align: center;
-            color: white;
-            font-size: 22px;
-            font-family: Rubik;
-            font-weight: 400;
-            word-wrap: break-word;
-          "
-        >
-          Barangay Treasurer
-        </div>
-        <div
-          class="FullName"
-          style="
-            width: 242px;
-            left: 0px;
-            top: 237px;
-            position: absolute;
-            text-align: center;
-            color: white;
-            font-size: 34px;
-            font-family: Rubik;
-            font-weight: 700;
-            word-wrap: break-word;
-          "
-        >
-          Full Name
-        </div>
-        <img
-          class="Userprofile"
-          style="
-            width: 201px;
-            height: 210px;
-            left: 24px;
-            top: 0px;
-            position: absolute;
-            border: 1px white solid;
-          "
-          src="https://via.placeholder.com/201x210"
-        />
+        Krishna Lyn Collen
       </div>
       <div
-        class="Frame19"
+        class="BarangayTreasurer"
         style="
-          width: 336px;
-          left: 33px;
-          top: 392px;
+          left: 157.32px;
+          top: 127.88px;
           position: absolute;
-          flex-direction: column;
-          justify-content: center;
-          align-items: flex-start;
-          display: inline-flex;
+          color: white;
+          font-size: 16px;
+          font-family: Inter;
+          font-weight: 400;
+          word-wrap: break-word;
+        "
+      >
+        Barangay Treasurer
+      </div>
+      <div
+        class="SideNavigation"
+        style="
+          width: 711.23px;
+          height: 414px;
+          left: 39px;
+          top: 236px;
+          position: absolute;
         "
       >
         <div
           class="Dashboard"
           style="
-            align-self: stretch;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            justify-content: flex-start;
-            align-items: flex-end;
-            gap: 22px;
-            display: inline-flex;
+            width: 711.23px;
+            height: 69px;
+            left: 0px;
+            top: -17px;
+            position: absolute;
           "
         >
           <img
-            class="ComboChart"
-            style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
+            class="Dashboard
+            style="
+              width: 39px;
+              height: 39px;
+              left: 0px;
+              top: 15px;
+              position: absolute;
+            "
+            src="dashboard.png"
           />
           <div
             class="Dashboard"
             style="
+              left: 56px;
+              top: 17px;
+              position: absolute;
               text-align: center;
               color: white;
-              font-size: 30px;
+              font-size: 32px;
               font-family: Rubik;
               font-weight: 400;
               word-wrap: break-word;
@@ -137,30 +120,51 @@
           >
             Dashboard
           </div>
+          <div
+            class="Recent"
+            style="
+              left: 398.47px;
+              top: 15.5px;
+              position: absolute;
+              text-align: center;
+              color: #7c9982;
+              font-size: 32px;
+              font-family: Rubik;
+              font-weight: 400;
+              word-wrap: break-word;
+            "
+          >
+            Recent
+          </div>
         </div>
         <div
           class="DataInput"
           style="
-            align-self: stretch;
-            padding-top: 15px;
+            width: 711.23px;
+            height: 69px;
+            padding-top: 14px;
             padding-bottom: 15px;
+            padding-right: 498.23px;
+            left: -2px;
+            top: 61px;
+            position: absolute;
             justify-content: flex-start;
             align-items: flex-start;
-            gap: 22px;
+            gap: 17px;
             display: inline-flex;
           "
         >
           <img
             class="Input"
             style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
+            src="dataInput.png"
           />
           <div
             class="DataInput"
             style="
               text-align: center;
               color: white;
-              font-size: 30px;
+              font-size: 32px;
               font-family: Rubik;
               font-weight: 400;
               word-wrap: break-word;
@@ -172,26 +176,30 @@
         <div
           class="FormsGeneration"
           style="
-            align-self: stretch;
-            padding-top: 15px;
+            height: 69px;
+            padding-top: 14px;
             padding-bottom: 15px;
+            padding-right: 392.23px;
+            left: -2px;
+            top: 140px;
+            position: absolute;
             justify-content: flex-start;
             align-items: flex-start;
-            gap: 22px;
+            gap: 14px;
             display: inline-flex;
           "
         >
           <img
-            class="TermsAndConditions"
+            class="FormsGeneration"
             style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
+            src="FormsGeneration.png"
           />
           <div
             class="FormsGeneration"
             style="
               text-align: center;
               color: white;
-              font-size: 30px;
+              font-size: 32px;
               font-family: Rubik;
               font-weight: 400;
               word-wrap: break-word;
@@ -203,28 +211,44 @@
         <div
           class="Transaction"
           style="
-            align-self: stretch;
-            padding-left: 25px;
-            padding-right: 25px;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            justify-content: flex-start;
-            align-items: flex-start;
-            gap: 22px;
-            display: inline-flex;
+            width: 711.23px;
+            height: 99px;
+            left: -8px;
+            top: 221px;
+            position: absolute;
           "
         >
+          <div
+            class="Transactioncontainer"
+            style="
+              width: 409.48px;
+              height: 69px;
+              left: -36.83px;
+              top: 0px;
+              position: absolute;
+              background: white;
+            "
+          ></div>
           <img
-            class="OnlineMoneyTransfer"
-            style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
+            class="Transaction"
+            style="
+              width: 39px;
+              height: 39px;
+              left: 46.03px;
+              top: 12.83px;
+              position: absolute;
+            "
+            src="transactionAnalysis.png"
           />
           <div
             class="Transactions"
             style="
+              left: 87.83px;
+              top: 12.83px;
+              position: absolute;
               text-align: center;
               color: #314c1c;
-              font-size: 30px;
+              font-size: 32px;
               font-family: Rubik;
               font-weight: 400;
               word-wrap: break-word;
@@ -236,25 +260,29 @@
         <div
           class="Reportsanalytics"
           style="
+            height: 69px;
             padding-top: 15px;
             padding-bottom: 15px;
-            justify-content: flex-start;
-            align-items: center;
-            gap: 22px;
+            left: -3px;
+            top: 294px;
+            position: absolute;
+            justify-content: flex-end;
+            align-items: flex-start;
+            gap: 13px;
             display: inline-flex;
           "
         >
           <img
             class="Requirements"
             style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
+            src="ReportsAnalysis.png"
           />
           <div
             class="ReportsAnalytics"
             style="
               text-align: center;
               color: white;
-              font-size: 30px;
+              font-size: 32px;
               font-family: Rubik;
               font-weight: 400;
               word-wrap: break-word;
@@ -263,73 +291,96 @@
             Reports & Analytics
           </div>
         </div>
+      </div>
+      <div
+        class="Logout"
+        style="
+          width: 711.23px;
+          height: 69px;
+          padding-top: 14px;
+          padding-bottom: 15px;
+          padding-right: 548.23px;
+          left: 39px;
+          top: 610px;
+          position: absolute;
+          justify-content: flex-start;
+          align-items: flex-start;
+          gap: 18px;
+          display: inline-flex;
+        "
+      >
+        <img
+          class="Logout"
+          style="width: 39px; height: 39px"
+          src="Logout.png"
+        />
         <div
           class="Logout"
           style="
-            align-self: stretch;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            justify-content: flex-start;
-            align-items: flex-start;
-            gap: 22px;
-            display: inline-flex;
+            text-align: center;
+            color: white;
+            font-size: 32px;
+            font-family: Rubik;
+            font-weight: 400;
+            word-wrap: break-word;
           "
         >
-          <img
-            class="Logout"
-            style="width: 39px; height: 39px"
-            src="https://via.placeholder.com/39x39"
-          />
-          <div
-            class="Logout"
-            style="
-              text-align: center;
-              color: white;
-              font-size: 30px;
-              font-family: Rubik;
-              font-weight: 400;
-              word-wrap: break-word;
-            "
-          >
-            Logout
-          </div>
+          Logout
         </div>
       </div>
       <div
-        class="Group43"
+        class="HistoryTransaction"
         style="
-          width: 1499px;
-          height: 131.2px;
-          left: 423px;
-          top: 0px;
+          width: 419.54px;
+          height: 114.44px;
+          left: 431.59px;
+          top: 60.3px;
+          position: absolute;
+          color: #365123;
+          font-size: 64px;
+          font-family: Rubik;
+          font-weight: 400;
+          word-wrap: break-word;
+        "
+      >
+        History<br />Transaction
+      </div>
+      <div
+        class="Group62"
+        style="
+          width: 273px;
+          height: 77.09px;
+          left: 1131px;
+          top: 60.3px;
           position: absolute;
         "
       >
         <div
-          class="Rectangle4127"
+          class="Rectangle4208"
           style="
-            width: 1499px;
-            height: 130px;
+            width: 273px;
+            height: 77.09px;
             left: 0px;
             top: 0px;
             position: absolute;
-            background: #e2dfdf;
+            background: #7c9982;
+            border-radius: 1000px;
           "
         ></div>
         <div
-          class="Transactions"
+          class="Jan30Feb"
           style="
-            left: 61.17px;
-            top: 17.2px;
+            left: 17px;
+            top: 19.22px;
             position: absolute;
-            color: black;
-            font-size: 96px;
+            color: white;
+            font-size: 32px;
             font-family: Rubik;
-            font-weight: 700;
+            font-weight: 400;
             word-wrap: break-word;
           "
         >
-          Transactions
+          20 Jan - 30 Feb
         </div>
       </div>
     </div>
