--- a/Data input Page/DataInptPage.html
+++ b/Data input Page/DataInptPage.html
@@ -24,42 +24,89 @@
     <title>Data Input Page</title>
   </head>
   <body>
-    <div class="col-*" id="nav-bar">
-      <div id="profile-pic">
-        <img
-          src="https://m.media-amazon.com/images/M/MV5BZDgwZDkxMDctNDMxZC00MjRmLTk5MjQtOGUwMTg5ODA5MzI3XkEyXkFqcGdeQXVyMTMxODA4Njgx._V1_FMjpg_UX1000_.jpg"
-          alt=""
-        />
-      </div>
-      <div id="admin-info">
-        <!-- Name of the Admin -->
-        <h3 id="name"><strong>Krishna Lyn Collen</strong></h3>
-        <!-- Position of the Admin -->
-        <p id="position">Barangay Treasurer</p>
-      </div>
-      <div id="nav-menu">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Data Input</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Forms Generation</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Transactions</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Reports & Analytics</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Log Out</a>
-                  </li>
-            </ul>
+    <div class="parent">
+      <div class="col-*" id="nav-bar">
+        <div id="profile-pic">
+          <img
+            src="https://m.media-amazon.com/images/M/MV5BZDgwZDkxMDctNDMxZC00MjRmLTk5MjQtOGUwMTg5ODA5MzI3XkEyXkFqcGdeQXVyMTMxODA4Njgx._V1_FMjpg_UX1000_.jpg"
+            alt=""
+          />
         </div>
+        <div id="admin-info">
+          <!-- Name of the Admin -->
+          <h3 id="name"><strong>Krishna Lyn Collen</strong></h3>
+          <!-- Position of the Admin -->
+          <p id="position">Barangay Treasurer</p>
+        </div>
+        <div id="nav-menu">
+          <div class="container-fluid">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/combo-chart.png"
+                    class="icon"
+                    alt=""
+                  />
+                  Dashboard</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/edit-property.png"
+                    class="icon"
+                    alt=""
+                  />
+                  Data Input</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/terms-and-conditions.png"
+                    class="icon"
+                    alt=""
+                  />
+                  Forms Generation</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/ledger.png"
+                    class="icon"
+                    alt=""
+                  />
+                  Transactions</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/graph-report.png"
+                    class="icon"
+                    alt=""
+                  />
+                  Reports & Analytics</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img
+                    src="https://img.icons8.com/314C1C/dotty/2x/export.png"
+                    class="icon"
+                    alt=""
+                  />Log Out</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Data Input Form -->
+      <div id="data-input">
+        <h1>Data Input</h1>
       </div>
     </div>
   </body>
