Here is the draft of Data Input Page, Finished fixing the navigation bar.

--- a/Data input Page/DataInptPage.html
+++ b/Data input Page/DataInptPage.html
@@ -62,7 +62,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#" active>
                   <img
                     src="https://img.icons8.com/314C1C/dotty/2x/terms-and-conditions.png"
                     class="icon"
